Sequencer crash on float images when OCIO GLSL shader can't be used #80193

Closed
opened 2020-08-28 16:36:43 +02:00 by Sergey Sharybin · 12 comments

System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-14.7.8

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: Unknown Unknown, hash: 7b2fe4c9ec
Worked: Anything prior to faeaf53255

Short description of error

Crash or corrupted display when enabling Convert to Float on sequencer's strip, or when adding EXR float image.

Exact steps for others to reproduce the error

  1. Add image strip to the VSE
  2. Enable Convert to Float in Adjust -> Color in the side panel.

Adding float image (EXR) will likely crash immediately.

Caused by removed format and data type specification in the faeaf53255.
It ie easy to restore the proper format for the display buffer, but after that it is rendering with the wrong color space (presumably due to GPU_framebuffer_bind_no_srgb).

The same missing format/data type specification for fallback is missing in 2.90. The case when Blender is built without OpenColorIO could probably be ignored. But it is not impossible OCIOImpl::setupGLSLDraw returns false, so perhaps the fix is to be applied to both master and 2.90.

P.S. The cache_handle is to be released AFTER the display buffer is used, but that is a separate problem.
P.P.S. This is an unlikely event when this code runs, but if the fix is trivial is still good to apply it to 2.90 branch.

**System Information** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-14.7.8 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: Unknown Unknown, hash: 7b2fe4c9ec Worked: Anything prior to faeaf53255 **Short description of error** Crash or corrupted display when enabling `Convert to Float` on sequencer's strip, or when adding EXR float image. **Exact steps for others to reproduce the error** 1. Add image strip to the VSE 2. Enable `Convert to Float` in Adjust -> Color in the side panel. Adding float image (EXR) will likely crash immediately. Caused by removed format and data type specification in the faeaf53255. It ie easy to restore the proper format for the display buffer, but after that it is rendering with the wrong color space (presumably due to `GPU_framebuffer_bind_no_srgb`). The same missing format/data type specification for fallback is missing in 2.90. The case when Blender is built without OpenColorIO could probably be ignored. But it is not impossible `OCIOImpl::setupGLSLDraw` returns false, so perhaps the fix is to be applied to both master and 2.90. P.S. The `cache_handle` is to be released AFTER the display buffer is used, but that is a separate problem. P.P.S. This is an unlikely event when this code runs, but if the fix is trivial is still good to apply it to 2.90 branch.
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I don't think it is high priority to be honest (aka not a show stopper). Building without OCIO is not likely, and if OCIOImpl::setupGLSLDraw returns false we can blame on bad image, so ok-ish to crash in 2.90?

Unless the patch is available and simple.

I don't think it is high priority to be honest (aka not a show stopper). Building without OCIO is not likely, and if `OCIOImpl::setupGLSLDraw` returns false we can blame on bad image, so ok-ish to crash in 2.90? Unless the patch is available and simple.

Added subscriber: @brecht

Added subscriber: @brecht

Agree this is not a showstopper for 2.90, as far as I know it's not something users would encounter in practice with official builds.

Agree this is not a showstopper for 2.90, as far as I know it's not something users would encounter in practice with official builds.
Sergey Sharybin changed title from Sequencer crash on float buffers when OCIO is disabled to Sequencer crash on float images when OCIO GLSL shader can't be used 2020-08-28 16:50:15 +02:00
Clément Foucault self-assigned this 2020-08-30 15:47:27 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Guess we can set status to Confirmed

Guess we can set status to `Confirmed`

I could not reproduce in latest master. Is that still an issue?

I could not reproduce in latest master. Is that still an issue?
Author
Owner

@fclem, easiest way to make the "faulty" codepath to trigger is to build with WITH_OPENCOLORIO=OFF.,

@fclem, easiest way to make the "faulty" codepath to trigger is to build with `WITH_OPENCOLORIO=OFF`.,

This issue was referenced by 13c7df1054

This issue was referenced by 13c7df1054d6762d92649adc27a4316356ad092c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80193
No description provided.