Fix T80193 Sequencer: Crash on float images when OCIO GLSL shader can't be used

This was just an oversight from refactoring this code in
rBfaeaf5325554e37981424ded5add7bf2df484c55